--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "es6-object-assign": "^1.1.0",
     "vue": "^2.5.2",
+    "vue-ls": "^3.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
